--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -250,3 +250,7 @@ focus_follows_mouse no
 bindsym $mod+F12 exec --no-startup-id dbus-send --print-reply --dest=com.ahfriedman.white_noise /toggle com.ahfriedman.white_noise.toggle
 
 bindsym $mod+c exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort -theme ~/.config/rofi/launchers/type-1/style-5.rasi
+
+bindsym $mod+x exec --no-startup-id rofi -show find -modi find:~/.local/share/rofi/finder.sh 
+
+# -theme ~/.config/rofi/launchers/type-1/style-5.rasi
