--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -57,7 +57,7 @@ font-0 = JetBrainsMono Nerd Font:size=8;2
 
 modules-left = i3 xwindow
 # modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
-modules-right = battery pulseaudio noise backlight filesystem memory cpu date systray powermenu
+modules-right = battery pulseaudio noise backlight filesystem memory cpu date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
