added workspace switching binds + bitwarden

--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -258,4 +258,6 @@ bindsym $mod+x exec --no-startup-id rofi -show find -modi find:~/.local/share/ro
 
 # Moving workspaces between screens 
 bindsym $mod+n move workspace to output left 
-bindsym $mod+m move workspace to output right 
+bindsym $mod+m move workspace to output right
+
+bindsym $mod+Shift+w exec --no-startup-id bitwarden
