--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -203,7 +203,7 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 gaps outer 0
 gaps inner 7
 smart_gaps on
-smart_borders on
+# smart_borders on
 
 default_border pixel 2
 # for_window [class=".*"] border pixel 0
@@ -234,11 +234,14 @@ bindsym Print exec --no-startup-id ~/.config/rofi/applets/bin/screenshot.sh
 
 # class                 border  backgr. text    indicator child_border
 # client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-client.focused          #4c7899 #3f3f3f #ffffff #2e9ef4   #285577
+# client.focused          #4c7899 #3f3f3f #ffffff #2e9ef4   #285577
+client.focused          #fba922 #3f3f3f #ffffff #2e9ef4   #285577
 # client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.focused_inactive #333333 #2f2f2f #ffffff #484e50   #5f676a
+# client.focused_inactive #333333 #2f2f2f #ffffff #484e50   #5f676a
+client.focused_inactive #333333 #2f2f2f #ffffff #484e50 #5f676a
 # client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.unfocused        #333333 #000000 #ffffff #292d2e   #222222
+# client.unfocused        #333333 #000000 #ffffff #292d2e   #222222
+client.unfocused        #33333300  #00000050 #ffffff #292d2e #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
@@ -261,3 +264,4 @@ bindsym $mod+n move workspace to output left
 bindsym $mod+m move workspace to output right
 
 bindsym $mod+Shift+w exec --no-startup-id bitwarden
+bindsym $mod+b exec --no-startup-id ~/Downloads/i3/rofi-bluetooth/rofi-bluetooth
