--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -144,8 +144,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-# corner-radius = 8
-# round-borders = 1
+corner-radius = 15
+round-borders = 1
 
 
 # Exclude conditions for rounded corners.
