--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -265,3 +265,5 @@ bindsym $mod+m move workspace to output right
 
 bindsym $mod+Shift+w exec --no-startup-id bitwarden
 bindsym $mod+b exec --no-startup-id ~/Downloads/i3/rofi-bluetooth/rofi-bluetooth
+
+bindsym $mod+o exec --no-startup-id ~/Downloads/i3/rofi-search/rofi-search
