--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -254,7 +254,7 @@ bindsym $mod+F12 exec --no-startup-id dbus-send --print-reply --dest=com.ahfried
 
 bindsym $mod+c exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort -theme ~/.config/rofi/launchers/type-1/style-5.rasi
 
-bindsym $mod+x exec --no-startup-id rofi -show find -modi find:~/.local/share/rofi/finder.sh 
+bindsym $mod+slash exec --no-startup-id rofi -show find -modi find:~/.local/share/rofi/finder.sh 
 
 # -theme ~/.config/rofi/launchers/type-1/style-5.rasi
 
