--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -152,8 +152,7 @@ round-borders = 1
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "class_g = 'i3-frame'"
-]
+  "class_g = 'i3-frame'"]
 
 
 #################################
