--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #000000 
+background = #000000
 #282A2E
 background-alt = #373B41
 foreground = #C5C8C6
@@ -51,7 +51,9 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrainsMono Nerd Font:size=8;2
+font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10"
+font-2 = "Fira Code Nerd Font:size=10"
+font-1 = "Feather:size=10"
 
 ; monospace:size=8;2
 
@@ -75,6 +77,7 @@ type = internal/tray
 
 format-margin = 1pt
 tray-spacing = 8pt
+
 
 # tray-position = right
 [module/i3]
@@ -224,13 +227,18 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+; format-volume-prefix = "VOL "
+; format-volume-prefix-foreground = ${colors.primary}
+
+format-volume = %{F#F0C674}<ramp-volume>%{F-} <label-volume>
+
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted = 󰝟
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
@@ -248,14 +256,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -328,14 +336,14 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = <label-charging>
+format-charging = %{F#F0C674}<ramp-capacity>%{F-} <label-charging>
 
 ; Available tags:
 ;   <label-discharging> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = <label-discharging>
+format-discharging = %{F#F0C674}<ramp-capacity>%{F-} <label-discharging>
 ; Available tags:
 ;   <label-full> (default)
 ;   <bar-capacity>
@@ -364,7 +372,7 @@ label-charging = %percentage%%+ %time%
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-format-discharging-prefix = "BAT "
+; format-discharging-prefix = "BAT "
 label-discharging = %percentage%% %time% %consumption%
 format-discharging-prefix-foreground = ${colors.primary}
 
@@ -381,6 +389,11 @@ label-full = Fully charged
 ; New in version 3.6.0
 label-low = BATTERY LOW
 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
 [module/backlight]
 type = internal/backlight
@@ -397,7 +410,7 @@ use-actual-brightness = true
 
 enable-scroll = true
 
-format-prefix = "BRT " 
+format-prefix = " " 
 format-prefix-foreground = ${colors.primary}
 
 [settings]
