update fonts and add agenda

--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -51,13 +51,14 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10"
-font-2 = "Fira Code Nerd Font:size=10"
-font-1 = "Feather:size=10"
+font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
+font-2 = "Fira Code Nerd Font:size=11;2"
+font-1 = "Feather:size=11;2"
 
 ; monospace:size=8;2
 
 modules-left = i3 xwindow
+modules-center = agenda
 # modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
 modules-right = battery pulseaudio noise backlight filesystem memory cpu date systray
 
@@ -77,7 +78,6 @@ type = internal/tray
 
 format-margin = 1pt
 tray-spacing = 8pt
-
 
 # tray-position = right
 [module/i3]
@@ -226,18 +226,11 @@ label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-
-; format-volume-prefix = "VOL "
-; format-volume-prefix-foreground = ${colors.primary}
-
 format-volume = %{F#F0C674}<ramp-volume>%{F-} <label-volume>
-
 ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
-
 label-volume = %percentage%%
-
 label-muted = 󰝟
 label-muted-foreground = ${colors.disabled}
 
@@ -419,23 +412,17 @@ pseudo-transparency = true
 
 ; vim:ft=dosini
 
-
-[module/powermenu]
-type = custom/text
-
-content = 襤
-content-background = black
-# content-foreground = red
-
-click-left = ~/.config/rofi/powermenu/type-1/powermenu.sh
-# click-right = powermenu_t1
-
-
 [module/noise]
 type = custom/script 
-
 exec = ~/Documents/projects/white-noise-server/target/debug/white-noise-server
-
 tail = true
-
 label = %output%
+
+
+[module/agenda]
+interval = 30
+type = custom/script
+exec = ~/Documents/projects/calendar-integration/target/release/polybar-agenda ~/.local/share/evolution/calendar/system/calendar.ics
+format = <label>
+format-foreground = #FFF
+format-prefix = "󰃭 "
