--- a/private_dot_config/polybar/config.ini
+++ b/private_dot_config/polybar/config.ini
@@ -35,7 +35,8 @@ bottom = true
 
 ; dpi = 96
 
-background = ${colors.background}
+background = #F0202020
+; ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 1pt
@@ -46,7 +47,7 @@ border-color = #00000000
 padding-left = 0
 padding-right = 1
 
-module-margin = 1
+module-margin = 5px
 
 separator = |
 separator-foreground = ${colors.disabled}
@@ -422,7 +423,7 @@ label = %output%
 [module/agenda]
 interval = 30
 type = custom/script
-exec = ~/Documents/projects/calendar-integration/target/release/polybar-agenda ~/.local/share/evolution/calendar/system/calendar.ics
+exec = ~/Documents/projects/calendar-integration/target/release/polybar-agenda --display-compact ~/.local/share/evolution/calendar/system/calendar.ics
 format = <label>
 format-foreground = #FFF
 format-prefix = "󰃭 "
